--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,8 @@ body {
     color: #fff;
 }
 
+/* 1) Navbar */
+
 a {
     text-decoration: none;
     color: #fff;
@@ -58,4 +60,25 @@ nav {
 
 .link a:hover::after {
     width: 75%;
+}
+
+/* 2) Header */
+
+header {
+    display: grid;
+    padding: 5rem 2rem;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2rem;
+}
+
+header .image img {
+    max-width: 100%;
+    height: auto;
+}
+
+/* 3) Footer */
+
+footer p{
+    display: flex;
+    justify-content: center;
 }
