--- a/styles.css
+++ b/styles.css
@@ -65,20 +65,51 @@ nav {
 /* 2) Header */
 
 header {
-    display: grid;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     padding: 5rem 2rem;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 2rem;
 }
 
-header .image img {
-    max-width: 100%;
-    height: auto;
+header .content h1 {
+    padding-bottom: 3rem;
 }
 
-/* 3) Footer */
+header .content p {
+    padding-bottom: 2rem;
+}
+
+header .content button {
+    padding: 10px;
+    margin: 0;
+}
+
+header .content button:hover {
+    cursor: pointer;
+}
+
+/* Skills */
+
+.skills-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 2rem; 
+    padding: 2rem 5rem;
+}
+
+.skills-container img {
+    max-width: 100px;
+    transition: transform 0.3s ease;
+}
+
+.skills-container img:hover {
+    transform: scale(1.2);
+}
+
+/* Footer */
 
 footer p{
     display: flex;
     justify-content: center;
+    padding: 5rem;
 }
