--- a/styles.css
+++ b/styles.css
@@ -103,10 +103,16 @@ header .content .btn {
 
 header .content .btn button {
     padding: 10px;
+    color: #fff;
+    background-color: #a788f7;
+    border-radius: 5px;
+    transition: all 0.3s ease;
 }
 
 header .content button:hover {
     cursor: pointer;
+    background-color: #9772f5;
+    transform: scale(1.05);
 }
 
 /* SECTION 3: Skills */
