--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,8 @@ body {
     font-family: 'Poppins', sans-serif;
     background-color: #12182b;
     color: #fff;
+    /* Disables highligting of text */
+    user-select: none;
 }
 
 /* Hide Scrollbar */
@@ -106,6 +108,7 @@ header .background img:hover {
 
 header .content h1 {
     padding-bottom: 2rem;
+    font-size: 4rem;
 }
 
 header .content h4 {
@@ -166,5 +169,5 @@ header .content button:hover {
 footer p{
     display: flex;
     justify-content: center;
-    padding: 5rem;
+    /* padding: 5rem; */
 }
