--- a/styles.css
+++ b/styles.css
@@ -4,19 +4,21 @@
     outline: none;
     border: none;
     box-sizing: border-box;
+    /* Enables smooth scroll to a section */
+    scroll-behavior: smooth;
 }
 
 body {
     font-family: 'Poppins', sans-serif;
     background-color: #12182b;
     color: #fff;
-    /* Disables highligting of text */
+    /* Disables highlighting of text */
     user-select: none;
 }
 
-/* Hide Scrollbar */
+/* Hide Scrollbar in Chrome, Edge, and Safari */
 body::-webkit-scrollbar {
-    display: none; /* Hides scrollbar in Chrome, Edge, and Safari */
+    display: none;
 }
 
 /* SECTION 1: Navbar */
@@ -41,6 +43,7 @@ nav {
     width: 100%;
     max-width: 200px;
     display: inline-block;
+    font-size: 1.5rem;
     font-weight: bold;
     transition: transform 0.3s ease;
 }
@@ -111,16 +114,16 @@ header .content h1 {
     font-size: 4rem;
 }
 
-header .content h4 {
-    padding-bottom: 0.5rem;
-}
-
 header .content h1 span {
     color: transparent;
     -webkit-text-stroke: 1px #a788f7;
 }
 
-header .content h4 span {
+header .content h3 {
+    padding-bottom: 0.5rem;
+}
+
+header .content h3 span {
     color: #a788f7;
 }
 
@@ -131,10 +134,12 @@ header .content .btn {
 }
 
 header .content .btn button {
+    /* Override some default settings */
     padding: 10px;
     color: #fff;
     background-color: #a788f7;
     border-radius: 5px;
+    font-family: 'Poppins', sans-serif;
     transition: all 0.3s ease;
 }
 
@@ -152,7 +157,7 @@ header .content button:hover {
     justify-content: space-evenly;
     flex-wrap: wrap;
     gap: 2rem; 
-    padding: 2rem 5rem;
+    padding: 5rem 5rem;
 }
 
 .skills-container img {
@@ -161,10 +166,25 @@ header .content button:hover {
 }
 
 .skills-container img:hover {
-    transform: scale(1.1);
+    transform: scale(1.2);
 }
 
-/* Footer */
+/* LAST SECTION: Footer */
+
+footer .links {
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+}
+
+footer img {
+    max-width: 3rem;
+    height: 100%;
+}
+
+footer img:hover {
+    cursor: pointer;
+}
 
 footer p{
     display: flex;
