--- a/styles.css
+++ b/styles.css
@@ -135,18 +135,19 @@ header .content .btn {
 
 header .content .btn button {
     /* Override some default settings */
-    padding: 10px;
-    color: #fff;
-    background-color: #a788f7;
-    border-radius: 5px;
+    padding: 1rem;
+    color: #a788f7;
+    background-color: #fff;
+    border-radius: 2rem;
     font-family: 'Poppins', sans-serif;
-    transition: all 0.3s ease;
+    font-weight: bolder;
+    transition: all 0.2s ease;
 }
 
 header .content button:hover {
     cursor: pointer;
-    background-color: #9772f5;
-    transform: scale(1.05);
+    background-color: #a788f7;
+    color: #fff;
 }
 
 /* SECTION 3: Skills */
@@ -175,7 +176,7 @@ header .content button:hover {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 2rem;
+    gap: 3rem;
 }
 
 #projects .title {
@@ -189,29 +190,31 @@ header .content button:hover {
 #projects .card {
     display: flex;
     max-width: 75%;
+    border-radius: 20px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: box-shadow 0.5s ease;
-    background-color: lightgray;
 }
 
 #projects .card:hover {
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    cursor: pointer;
 }
 
 #projects .card img {
     max-width: 50%;
-    cursor: pointer;
+    border-radius: 20px 0px 0px 20px;
 }
 
 #projects .card .container {
     padding: 2rem;
     background-color: white;
     color: #12182b;
+    border-radius: 0px 20px 20px 0px;
 }
 
 /* LAST SECTION: Footer */
 
-.footer {
+footer {
     padding-top: 2rem;
     padding-bottom: 0.5rem;
 }
@@ -231,7 +234,13 @@ footer img:hover {
     cursor: pointer;
 }
 
-footer p{
+footer p {
     display: flex;
     justify-content: center;
+}
+
+/* CSS filter generator to convert from black to target hex color
+ -> https://isotropic.co/tool/hex-color-to-css-filter/ */
+footer .footer-logo:hover {
+    filter: invert(50%) sepia(69%) saturate(885%) hue-rotate(217deg) brightness(104%) contrast(94%);
 }
