--- a/styles.css
+++ b/styles.css
@@ -43,8 +43,8 @@ nav {
     width: 100%;
     max-width: 200px;
     display: inline-block;
-    font-size: 1.5rem;
-    font-weight: bold;
+    font-size: 1.75rem;
+    font-weight: 600;
     transition: transform 0.3s ease;
 }
 
@@ -57,6 +57,8 @@ nav {
    display: flex;
    align-items: center;
    gap: 2rem;
+   font-size: 1.25rem;
+   font-weight: 500;
 }
 
 .link a {
@@ -130,15 +132,20 @@ header .content h3 span {
 /* Button */
 
 header .content .btn {
-    padding: 2rem 0rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding-top: 2rem;
 }
 
 header .content .btn button {
     /* Override some default settings */
     padding: 1rem;
-    color: #a788f7;
-    background-color: #fff;
-    border-radius: 2rem;
+    color: #fff;
+    background-color: #a788f7;
+    border: solid;
+    border-radius: 20px;
+    border-color: transparent;
     font-family: 'Poppins', sans-serif;
     font-weight: bolder;
     transition: all 0.2s ease;
@@ -146,8 +153,9 @@ header .content .btn button {
 
 header .content button:hover {
     cursor: pointer;
-    background-color: #a788f7;
-    color: #fff;
+    background-color: #fff;
+    color: #4240f1;
+    border-color: #4240f1;
 }
 
 /* SECTION 3: Skills */
@@ -159,6 +167,7 @@ header .content button:hover {
     flex-wrap: wrap;
     gap: 2rem; 
     padding: 5rem 5rem;
+    background: linear-gradient(#12182b, #242f55);
 }
 
 .skills-container img {
@@ -184,12 +193,13 @@ header .content button:hover {
     text-align: center;
     padding: 4rem 2rem;
     font-size: 2rem;
-    background-image: linear-gradient(to right, #a788f7, rgb(66, 64, 241));
+    background-image: linear-gradient(to right, #a788f7, #4240f1);
 }
 
 #projects .card {
     display: flex;
-    max-width: 75%;
+    /* width: 70vw; */
+    max-width: 70vw;
     border-radius: 20px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: box-shadow 0.5s ease;
@@ -212,11 +222,105 @@ header .content button:hover {
     border-radius: 0px 20px 20px 0px;
 }
 
+/* SECTION 5: Contact */
+
+.contact-container {
+    display: flex;
+    /* height: 100vh; */
+    align-items: center;
+    justify-content: space-evenly;
+    padding: 0 10rem;
+    padding-top: 5rem;
+}
+
+.contact-left {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    gap: 20px;
+}
+
+.contact-left .title h1 {
+    font-size: 2rem;
+    font-weight: 500;
+    /* margin-bottom: 0.25rem; */
+}
+
+.contact-left .title hr {
+    border-style: solid;
+    border-width: 2px;
+    border-radius: 10px;
+    color: #a788f7;
+    margin-bottom: 1rem;
+
+}
+
+.contact-left button img {
+    max-width: 2rem;
+}
+
+.contact-input {
+    height: 3rem;
+    width: 15vw;
+    outline: none;
+    border: solid;
+    border-color: transparent;
+    padding-left: 1rem;
+    border-radius: 20px;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 400;
+}
+
+.contact-left textarea {
+    resize: none;
+    height: 20vh;
+    padding-top: 0.75rem;
+    padding-right: 1rem;
+}
+
+.contact-input:focus {
+    border: 2px solid #a788f7;
+}
+
+/* Styles the placeholder text of <input> or <textarea> */
+.contact-input::placeholder {
+    color: gray;
+}
+
+.contact-left button {
+    display: flex;
+    align-items: center;
+    padding: 0.75rem 2rem;
+    font-size: 1rem;
+    gap: 0.25rem;
+    color: #fff;
+    background-color: #a788f7;
+    border-radius: 30px;
+    border-color: transparent;
+    font-weight: 700;
+    transition: all 0.2s ease;
+}
+
+.contact-left button:hover {
+    cursor: pointer;
+    transform: scale(1.05);
+    background-color: #9377d8;
+}
+
+.contact-left button img {
+    filter: invert(100%) sepia(0%) saturate(7495%) hue-rotate(312deg) brightness(102%) contrast(101%);
+}
+
+@media (max-width: 80vw) {
+    .contact-input {
+        width: 80vw;
+    }
+}
+
 /* LAST SECTION: Footer */
 
 footer {
-    padding-top: 2rem;
-    padding-bottom: 0.5rem;
+    margin-bottom: 1rem;
 }
 
 footer .links {
