--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ body::-webkit-scrollbar {
     display: none;
 }
 
-/* SECTION 1: Navbar */
+/* SECTION: Navbar */
 
 a {
     text-decoration: none;
@@ -81,7 +81,7 @@ nav {
     width: 75%;
 }
 
-/* SECTION 2: Header */
+/* SECTION: Header */
 
 header {
     display: flex;
@@ -158,7 +158,58 @@ header .content button:hover {
     border-color: #4240f1;
 }
 
-/* SECTION 3: Skills */
+/* SECTION: About Me */
+
+.about-me-title {
+    margin: 4rem 0rem;
+    font-size: 2rem;
+}
+
+.about-me-title h1 {
+    display: flex;
+    justify-content: center;
+}
+
+.about-me-title hr {
+    border: 2px solid #a788f7;
+    border-radius: 10px;
+    width: 15rem;
+    text-align: center;
+    margin: auto;
+}
+
+.about-me-container {
+    display: flex;
+    padding: 0rem 6rem;
+    gap: 2rem;
+}
+
+.about-me-right {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.about-me-right .links {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.about-me-right img {
+    max-width: 3rem;
+    height: 100%;
+}
+
+.about-me-container .about-me-logo:hover {
+    filter: invert(50%) sepia(69%) saturate(885%) hue-rotate(217deg) brightness(104%) contrast(94%);
+}
+
+.about-me-left img {
+    max-width: 500px;
+    border-radius: 50px;
+}
+
+/* SECTION: Skills */
 
 .skills-container {
     display: flex;
@@ -179,7 +230,7 @@ header .content button:hover {
     transform: scale(1.2);
 }
 
-/* SECTION 4: Projects */
+/* SECTION: Projects */
 
 #projects {
     display: flex;
@@ -233,7 +284,7 @@ header .content button:hover {
     }
 }
 
-/* SECTION 5: Contact */
+/* SECTION: Contact */
 
 .contact-container {
     display: flex;
