--- a/styles.css
+++ b/styles.css
@@ -184,27 +184,51 @@ header .content button:hover {
     gap: 2rem;
 }
 
-.about-me-right {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
+@media only screen and (max-width: 1000px) {
+    .about-me-container {
+        flex-direction: column;
+        align-items: center;
+    }
 }
 
-.about-me-right .links {
+.about-me-left img {
+    max-width: 500px;
+    border-radius: 50px;
+}
+
+@media only screen and (max-width: 1200px) {
+    .about-me-container {
+        align-items: center;
+    }
+}
+
+.about-me-right h2{
+    margin-bottom: 1rem;
+}
+
+.about-me-right span {
+    font-weight: 200;
+}
+
+.about-me-right .content {
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
+}
+
+.about-me-right .content .links {
     display: flex;
     justify-content: space-evenly;
 }
 
-.about-me-right img {
+.about-me-right .content img {
     max-width: 3rem;
     height: 100%;
 }
 
 .about-me-container .about-me-logo:hover {
     filter: invert(50%) sepia(69%) saturate(885%) hue-rotate(217deg) brightness(104%) contrast(94%);
-}
-
-.about-me-left img {
+}.about-me-left img {
     max-width: 500px;
     border-radius: 50px;
 }
@@ -397,7 +421,7 @@ header .content button:hover {
 
 footer {
     padding-top: 1rem;
-    padding-bottom: 0.5rem;
+    /* padding-bottom: 0.5rem; */
     background: linear-gradient(#12182b, #242f55);
 }
 
@@ -419,6 +443,7 @@ footer img:hover {
 footer p {
     display: flex;
     justify-content: center;
+    padding: 0.5rem 0rem;
 }
 
 /* CSS filter generator to convert from black to target hex color
